--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -28,49 +28,29 @@ changelog:
       - "^docs:"
       - "^test:"
 
-dockers:
-  - image_templates:
-      - "ghcr.io/jaxxstorm/proxyt:{{ .Tag }}-amd64"
-      - "ghcr.io/jaxxstorm/proxyt:latest-amd64"
-    dockerfile: Dockerfile
-    use: buildx
-    build_flag_templates:
-      - "--platform=linux/amd64"
-      - "--label=org.opencontainers.image.title={{ .ProjectName }}"
-      - "--label=org.opencontainers.image.description=Tailscale login server proxy"
-      - "--label=org.opencontainers.image.url=https://github.com/jaxxstorm/proxyt"
-      - "--label=org.opencontainers.image.source=https://github.com/jaxxstorm/proxyt"
-      - "--label=org.opencontainers.image.version={{ .Version }}"
-      - "--label=org.opencontainers.image.created={{ time \"2006-01-02T15:04:05Z07:00\" }}"
-      - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
-      - "--label=org.opencontainers.image.licenses=MIT"
-    goos: linux
-    goarch: amd64
-    ids:
-      - proxyt
-    extra_files:
-      - LICENSE
-  - image_templates:
-      - "ghcr.io/jaxxstorm/proxyt:{{ .Tag }}-arm64"
-      - "ghcr.io/jaxxstorm/proxyt:latest-arm64"
-    dockerfile: Dockerfile
-    use: buildx
-    build_flag_templates:
-      - "--platform=linux/arm64"
-      - "--label=org.opencontainers.image.title={{ .ProjectName }}"
-      - "--label=org.opencontainers.image.description=Tailscale login server proxy"
-      - "--label=org.opencontainers.image.url=https://github.com/jaxxstorm/proxyt"
-      - "--label=org.opencontainers.image.source=https://github.com/jaxxstorm/proxyt"
-      - "--label=org.opencontainers.image.version={{ .Version }}"
-      - "--label=org.opencontainers.image.created={{ time \"2006-01-02T15:04:05Z07:00\" }}"
-      - "--label=org.opencontainers.image.revision={{ .FullCommit }}"
-      - "--label=org.opencontainers.image.licenses=MIT"
-    goos: linux
-    goarch: arm64
-    ids:
-      - proxyt
-    extra_files:
-      - LICENSE
+kos:
+  - id: proxyt
+    build: proxyt
+    main: .
+    base_image: gcr.io/distroless/static-debian12:nonroot
+    platforms:
+      - linux/amd64
+      - linux/arm64
+    repository: ghcr.io/jaxxstorm/proxyt
+    tags:
+      - latest
+      - "{{ .Tag }}"
+    labels:
+      "org.opencontainers.image.title": "{{ .ProjectName }}"
+      "org.opencontainers.image.description": "Tailscale login server proxy"
+      "org.opencontainers.image.url": "https://github.com/jaxxstorm/proxyt"
+      "org.opencontainers.image.source": "https://github.com/jaxxstorm/proxyt"
+      "org.opencontainers.image.version": "{{ .Version }}"
+      "org.opencontainers.image.created": "{{ time \"2006-01-02T15:04:05Z07:00\" }}"
+      "org.opencontainers.image.revision": "{{ .FullCommit }}"
+      "org.opencontainers.image.licenses": "MIT"
+    creation_time: "{{ .CommitTimestamp }}"
+    sbom: none
 
 brews:
   - name: proxyt
@@ -94,13 +74,3 @@ scoops:
       email: bot@leebriggs.co.uk
     description: Easily proxy the Tailscale login API for blocked networks.
     homepage: https://github.com/jaxxstorm/proxyt
-
-docker_manifests:
-  - name_template: "ghcr.io/jaxxstorm/proxyt:{{ .Tag }}"
-    image_templates:
-      - "ghcr.io/jaxxstorm/proxyt:{{ .Tag }}-amd64"
-      - "ghcr.io/jaxxstorm/proxyt:{{ .Tag }}-arm64"
-  - name_template: "ghcr.io/jaxxstorm/proxyt:latest"
-    image_templates:
-      - "ghcr.io/jaxxstorm/proxyt:latest-amd64"
-      - "ghcr.io/jaxxstorm/proxyt:latest-arm64"
